# troy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  comparison.cpp  install_seal.sh  main.cpp  main.cu  main_bfv.cu  main_bgv.cu  main_ckks.cu  main_seal.cpp  makepackage.sh  readme.md  sealhelper.h  temp.txt
app/: LinearHelper.cuh  LinearHelperCKKS.cuh  LinearHelperSEAL.h  matmul.cuh
binder/: CMakeLists.txt  binder.cpp  binder.cu  efftest.py  reference.txt  test.py  timetest.py
src/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  batchencoder_cuda.cu  batchencoder_cuda.cuh  ciphertext.cpp  ciphertext.h  ciphertext_cuda.cu  ciphertext_cuda.cuh  ckks.cpp  ckks.h  ckks_cuda.cu  ckks_cuda.cuh  context.cpp  context.h  context_cuda.cu  context_cuda.cuh  decryptor.cpp  decryptor.h  decryptor_cuda.cu  decryptor_cuda.cuh  devicearray.cuh  encryptionparams.cpp  encryptionparams.cuh  encryptionparams.h  encryptionparams_cuda.cu  encryptionparams_cuda.cuh  encryptor.cpp  encryptor.h  encryptor_cuda.cu  encryptor_cuda.cuh  evaluator.cpp  evaluator.h  evaluator_cuda.cu  evaluator_cuda.cuh  galoiskeys.h  galoiskeys_cuda.cuh  helper.h  kernelprovider.cu  kernelprovider.cuh  (+28 more)
src/utils/: clipnormal.cpp  clipnormal.h  common.h  croots.cpp  croots.h  defines.h  devicearray.cuh  dwthandler.h  fips202.c  galois.cpp  galois.h  galois_cuda.cu  galois_cuda.cuh  globals.cpp  globals.h  hash.cpp  hash.h  hestdparams.h  hostarray.h  memorypool_cuda.cu  memorypool_cuda.cuh  ntt.cpp  ntt.h  ntt_cuda.cuh  numth.cpp  numth.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  rlwe.cpp  rlwe.h  rlwe_cuda.cu  rlwe_cuda.cuh  rns.cpp  rns.h  rns_cuda.cu  rns_cuda.cuh  scalingvariant.cpp  scalingvariant.h  scalingvariant_cuda.cu  (+9 more)
test/: CMakeLists.txt  batchencoder.cpp  ckks.cpp  ckks_cuda.cu  context.cpp  encryptionparams.cpp  encryptor.cpp  encryptor_cuda.cu  evaluator.cpp  evaluator_cuda.cu  keygenerator.cpp  modulus.cpp  timetest.cu  timetest_seal.cpp
test/app/: linear.cu  linear_ckks.cu  linear_seal.cpp  matmul.cu
test/utils/: common.cpp  galois.cpp  hash.cpp  ntt.cpp  numth.cpp  polyarithsmallmod.cpp  rns.cpp  uintarith.cpp  uintarithmod.cpp  uintarithsmallmod.cpp  uintcore.cpp
